# Toepassingsopdracht_Talen_en_automaten

./: .gitignore  CMakeLists.txt  GroepsVoorstel.docx  MarkovChain.hpp  MusyGen.h  Note.cpp  README.md  VariableMarkovChain.hpp  contract.xlsx  main.cpp
input_files/midi/: plastic_love.mid
libs/RTMidi/src/: RtMidi.cpp  rtmidi_c.cpp
libs/midifile/include/: MidiFile.h
libs/midifile/src/: MidiEventList.cpp  MidiFile.cpp  Options.cpp  RtMidi.cpp  rtmidi_c.cpp
midi_files/input_files/: Darude.mid
midi_files/output_files/: ThemeA.mid  ThemeA_third_order.mid  mario_dire_dire_third_order.mid  twinkle_twinkle234.mid  twinkle_twinkle_second_order.mid
src/: MusyGen.cpp  MusyGen.h  Parser.cpp  Parser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/data_structures/: MarkovChain.hpp  Note.cpp  Note.h  VariableMarkovChain.hpp
